dataset1235/2025-2/805158916/users/3688932496/executions/3435325918_359761547.log
== RUN (2025-09-03 14:24:14)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:43)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
  if idade >= 2:
  print("paga")
  else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:35)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
  if(idade >= 2):
  print("paga")
  else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:55)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:24:02)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:22:52)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
  if( idade >= 2):
    print("paga")
else:
    print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if( idade >= 2):
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:05)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
  if(idade >= 2):
    print("paga")
  else:
    print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if(idade >= 2):
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:24:20)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da criança: paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:20:50)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da criança:
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança:
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da criança:
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da criança:
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da criança:
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da criança:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:42)
-- CODE: 
idade = int(input("Informe a idade da criança: "))
  if idade >= 2:
  print("paga")
  else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2:
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
